--- a/index.html
+++ b/index.html
@@ -320,8 +320,10 @@
                 <a href="https://t.me/Gevoplay" class="social-link" style="margin-right: 20px;">Telegram</a>
                 <a href="https://vk.com/gnazaryan1993" class="social-link">Vkontakte</a>
             </div>
-            <div class="reveal" style="margin-top: 15px; display: flex; justify-content: center;">
-                <img src="images/logo.png" alt="Logo" style="max-width: 200px; width: 100%; height: auto;">
+            <div class="reveal tilt-card" style="margin-top: 15px; display: flex; justify-content: center; width: 200px; margin-left: auto; margin-right: auto;">
+                <div class="tilt-inner" style="width: 100%; display: flex; justify-content: center;">
+                    <img src="images/logo.png" alt="Logo" style="max-width: 200px; width: 100%; height: auto;">
+                </div>
             </div>
         </div>
     </section>
@@ -475,8 +477,8 @@
                         const rect = card.getBoundingClientRect();
                         const x = e.clientX - rect.left; const y = e.clientY - rect.top;
                         const centerX = rect.width / 2; const centerY = rect.height / 2;
-                        const rotateX = ((y - centerY) / centerY) * -10; const rotateY = ((x - centerX) / centerX) * 10;
-                        inner.style.transform = `perspective(1000px) rotateX(${rotateX}deg) rotateY(${rotateY}deg) scale3d(1.05, 1.05, 1.05)`;
+                        const rotateX = ((y - centerY) / centerY) * -30; const rotateY = ((x - centerX) / centerX) * 30;
+                        inner.style.transform = `perspective(1000px) rotateX(${rotateX}deg) rotateY(${rotateY}deg) scale3d(1.15, 1.15, 1.15)`;
                     });
                     card.addEventListener('mouseleave', () => {
                         const inner = card.querySelector('.tilt-inner');
