--- a/index.html
+++ b/index.html
@@ -477,7 +477,15 @@
                         const rect = card.getBoundingClientRect();
                         const x = e.clientX - rect.left; const y = e.clientY - rect.top;
                         const centerX = rect.width / 2; const centerY = rect.height / 2;
-                        const rotateX = ((y - centerY) / centerY) * -30; const rotateY = ((x - centerX) / centerX) * 30;
+                        
+                        // Проверяем тип карточки
+                        let rotateAmount = 30; // По умолчанию для services и logo
+                        if (card.classList.contains('portfolio-item')) {
+                            rotateAmount = 15; // Уменьшенный наклон для портфолио
+                        }
+                        
+                        const rotateX = ((y - centerY) / centerY) * -rotateAmount;
+                        const rotateY = ((x - centerX) / centerX) * rotateAmount;
                         inner.style.transform = `perspective(1000px) rotateX(${rotateX}deg) rotateY(${rotateY}deg) scale3d(1.15, 1.15, 1.15)`;
                     });
                     card.addEventListener('mouseleave', () => {
