--- a/admin.html
+++ b/admin.html
@@ -50,7 +50,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-storage-compat.js"></script>
 
     <script>
-        // ВАШИ КЛЮЧИ
+        // ВАШИ КЛЮЧИ (Уже вставлены)
         const firebaseConfig = {
           apiKey: "AIzaSyAFg-nSFAW-pUw8qgpwoL4FP8wfkGBjuEs",
           authDomain: "gevartplay.firebaseapp.com",
