--- a/index.html
+++ b/index.html
@@ -331,9 +331,9 @@
                 const response = await fetch(`https://api.github.com/repos/${USERNAME}/${REPO}/contents/${FOLDER}`);
                 const files = await response.json();
 
-                // Фильтруем (берем только картинки .jpg, .png)
+                // Фильтруем: берем картинки, НО ИСКЛЮЧАЕМ logo.png
                 const images = files.filter(file => 
-                    file.name.match(/\.(jpg|jpeg|png|gif)$/i)
+                    file.name.match(/\.(jpg|jpeg|png|gif)$/i) && !file.name.includes('logo.png')
                 );
 
                 if (images.length === 0) {
