--- a/index.html
+++ b/index.html
@@ -24,6 +24,32 @@
             cursor: default;
         }
 
+        /* --- КНОПКА ADMIN (НОВАЯ) --- */
+        .admin-link {
+            position: absolute;
+            top: 30px;
+            right: 40px;
+            font-family: 'Oswald', sans-serif;
+            font-size: 0.8rem;
+            color: rgba(255, 255, 255, 0.2); /* Почти невидимая */
+            letter-spacing: 3px;
+            text-decoration: none;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            padding: 8px 20px;
+            border-radius: 30px;
+            z-index: 1000;
+            transition: all 0.4s ease;
+            backdrop-filter: blur(5px);
+        }
+
+        .admin-link:hover {
+            color: #fff;
+            border-color: var(--primary);
+            box-shadow: 0 0 20px rgba(91, 81, 216, 0.6); /* Неоновое свечение */
+            transform: scale(1.05);
+            background: rgba(91, 81, 216, 0.1);
+        }
+
         /* --- ТИПОГРАФИКА --- */
         h1, h2, h3, .contact-link { font-family: 'Oswald', sans-serif; text-transform: uppercase; letter-spacing: 2px; }
         
@@ -35,7 +61,7 @@
         img { width: 100%; display: block; }
         a { text-decoration: none; color: white; transition: 0.3s; }
 
-        /* --- ИКОНКА "СЛОИ" (Для Services) --- */
+        /* --- ИКОНКА "СЛОИ" --- */
         .layer-icon {
             position: absolute; top: 15px; right: 15px; width: 20px; height: 20px;
             background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21 7.25V18.25C21 19.9069 19.6569 21.25 18 21.25H7C5.34315 21.25 4 19.9069 4 18.25V7.25C4 5.59315 5.34315 4.25 7 4.25H18C19.6569 4.25 21 5.59315 21 7.25Z' stroke='white' stroke-width='1.5'/%3E%3Cpath d='M17 3V1.75C17 1.33579 16.6642 1 16.25 1H4.25C2.45507 1 1 2.45507 1 4.25V16.25C1 16.6642 1.33579 17 1.75 17H3' stroke='white' stroke-width='1.5' stroke-linecap='round'/%3E%3C/svg%3E");
@@ -44,11 +70,10 @@
             filter: drop-shadow(0 2px 4px rgba(0,0,0,0.8));
         }
 
-        /* --- АНИМАЦИЯ ПОЯВЛЕНИЯ --- */
+        /* --- АНИМАЦИИ --- */
         .reveal { opacity: 0; transform: translateY(40px); transition: all 0.8s ease-out; }
         .reveal.active { opacity: 1; transform: translateY(0); }
 
-        /* --- 3D TILT --- */
         .tilt-card { perspective: 1000px; transform-style: preserve-3d; }
         .tilt-inner { transition: transform 0.1s ease-out; will-change: transform; transform-style: preserve-3d; backface-visibility: hidden; }
         
@@ -67,7 +92,6 @@
 
         .hero-content { position: relative; z-index: 1; }
 
-        /* ЭПИЧНЫЙ ЗАГОЛОВОК */
         .hero-content h1 {
             font-size: 12vw; font-weight: 900; line-height: 0.9;
             background: linear-gradient(45deg, #fff, var(--primary));
@@ -136,7 +160,7 @@
         }
         @keyframes fadeIn { from{opacity:0;} to{opacity:1;} }
 
-        /* --- PORTFOLIO (MASONRY) --- */
+        /* --- PORTFOLIO --- */
         .portfolio-masonry { column-count: 3; column-gap: 20px; }
         .portfolio-item { 
             break-inside: avoid; margin-bottom: 20px; position: relative; border-radius: 4px; overflow: visible; 
@@ -219,6 +243,7 @@
             .services-grid { grid-template-columns: 1fr; }
             .video-content { padding: 60px 20px; gap: 30px; }
             .clickable-service:hover::after { content: none; } 
+            .admin-link { top: 20px; right: 20px; padding: 5px 15px; font-size: 0.7rem; } /* Адаптив кнопки */
         }
     </style>
 </head>
@@ -247,6 +272,8 @@
     </div>
 
     <header>
+        <a href="admin.html" class="admin-link">ADMIN</a>
+
         <div class="hero-bg"></div>
         <div class="hero-content">
             <h1>GEVART<br>PLAY</h1>
