--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
         img { 
             width: 100%; 
             display: block; 
+            /* Плавность перехода цвета и подъема */
             transition: filter 1.5s ease-in-out, transform 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94), box-shadow 1.5s ease-in-out;
+            backface-visibility: hidden; /* Убирает "лесенку" при повороте */
         }
         
         .about-img-container img { border-radius: 5px; filter: grayscale(100%); box-shadow: 20px 20px 0 var(--primary); }
@@ -70,6 +72,7 @@
             box-shadow: 0 15px 40px -5px rgba(91, 81, 216, 0.6), 0 0 20px rgba(91, 81, 216, 0.3);
             transform: translateY(-7px) scale(1.02);
             z-index: 10;
+            position: relative; /* Чтобы z-index сработал и перекрыл соседей */
         }
 
         .exp-badge { display: inline-block; margin-top: 30px; padding: 10px 20px; border: 1px solid var(--primary); color: var(--primary); font-family: 'Oswald'; letter-spacing: 1px; }
@@ -84,23 +87,25 @@
         .service-card p { color: #ccc; font-size: 0.95rem; }
         .layer-icon { position: absolute; top: 15px; right: 15px; width: 20px; height: 20px; background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21 7.25V18.25C21 19.9069 19.6569 21.25 18 21.25H7C5.34315 21.25 4 19.9069 4 18.25V7.25C4 5.59315 5.34315 4.25 7 4.25H18C19.6569 4.25 21 5.59315 21 7.25Z' stroke='white' stroke-width='1.5'/%3E%3Cpath d='M17 3V1.75C17 1.33579 16.6642 1 16.25 1H4.25C2.45507 1 1 2.45507 1 4.25V16.25C1 16.6642 1.33579 17 1.75 17H3' stroke='white' stroke-width='1.5' stroke-linecap='round'/%3E%3C/svg%3E"); background-size: contain; background-repeat: no-repeat; opacity: 0.8; z-index: 5; pointer-events: none; filter: drop-shadow(0 2px 4px rgba(0,0,0,0.8)); }
 
-        /* === ИЗМЕНЕННЫЙ СТИЛЬ ГАЛЕРЕИ (Горизонтальные ряды) === */
+        /* === ИСПРАВЛЕННЫЙ СТИЛЬ ГАЛЕРЕИ (PINTEREST / MASONRY) === */
         .portfolio-masonry {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr); /* 3 колонки */
-            gap: 20px;
+            column-count: 3; /* 3 колонки, как в Pinterest */
+            column-gap: 20px;
         }
         .portfolio-item { 
             position: relative; 
             border-radius: 4px; 
-            overflow: hidden; /* Важно для обрезки */
+            /* overflow: hidden;  <--- УБРАНО, ЧТОБЫ РАМКА НЕ РЕЗАЛАСЬ */
             cursor: pointer;
-            aspect-ratio: 2 / 3; /* Вертикальный формат фото */
+            break-inside: avoid; /* Чтобы фото не разрывались между колонками */
+            margin-bottom: 20px; /* Отступ снизу */
+            display: inline-block; /* Важно для правильного отображения в колонках */
+            width: 100%;
         }
         .portfolio-item img {
             width: 100%;
-            height: 100%;
-            object-fit: cover; /* Заполняет контейнер, обрезая лишнее */
+            height: auto; /* Натуральная высота для шахматного порядка */
+            display: block;
         }
 
         /* --- МОДАЛКА --- */
@@ -144,7 +149,7 @@
         .ctx-btn:hover { background: var(--primary); }
 
         @media (max-width: 1024px) { 
-            .portfolio-masonry { grid-template-columns: repeat(2, 1fr); } /* 2 колонки на планшете */
+            .portfolio-masonry { column-count: 2; } 
             .hero-content h1 { font-size: 15vw; } .tilt-inner { transform: none !important; } 
         }
         @media (max-width: 768px) { 
