--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GevArtPlay | Visual Arts</title>
+    
+    <link rel="icon" href="images/logo.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&family=Oswald:wght@700&display=swap" rel="stylesheet">
     <style>
         :root { --primary: #5b51d8; --bg: #050505; --text: #ffffff; --text-muted: #a3a3a3; }
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { background-color: var(--bg); color: var(--text); font-family: 'Montserrat', sans-serif; overflow-x: hidden; line-height: 1.6; cursor: default; }
 
-        /* --- КНОПКИ УПРАВЛЕНИЯ --- */
+        /* --- КНОПКИ АДМИНА --- */
         .admin-btn { display: none; position: fixed; bottom: 30px; right: 30px; padding: 15px 30px; font-family: 'Oswald'; font-size: 1.2rem; border: none; border-radius: 50px; z-index: 20000; cursor: pointer; transition: 0.3s; text-transform: uppercase; box-shadow: 0 0 20px rgba(0,0,0,0.5); }
         #enable-edit-btn { background: #5b51d8; color: white; box-shadow: 0 0 20px rgba(91, 81, 216, 0.5); }
         #enable-edit-btn:hover { transform: scale(1.1); background: #6c63ff; }
