--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>GevArtPlay | Visual Arts</title>
     
     <link rel="icon" href="images/ikon.png" type="image/png">
+    <link rel="apple-touch-icon" href="images/ikon.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&family=Oswald:wght@700&display=swap" rel="stylesheet">
     <style>
         :root { --primary: #5b51d8; --bg: #050505; --text: #ffffff; --text-muted: #a3a3a3; }
@@ -103,7 +104,7 @@
         /* ==================== НАСТРОЙКИ ДЛЯ КОМПЬЮТЕРА (DESKTOP) ================== */
         /* ========================================================================== */
         @media (min-width: 1025px) {
-            .container { padding: 100px 10vw; } /* Широкие отступы */
+            .container { padding: 100px 10vw; } 
             .portfolio-masonry { column-count: 4; column-gap: 20px; }
             .portfolio-item { margin-bottom: 20px; display: inline-block; width: 100%; position: relative; border-radius: 4px; cursor: pointer; }
             .portfolio-item img { 
@@ -113,13 +114,11 @@
             }
 
             /* --- ЭФФЕКТ ФОКУСА (Только ПК) --- */
-            /* Когда мышка внутри галереи -> ВСЕ тускнеют */
             .portfolio-masonry:hover .portfolio-item img {
                 filter: grayscale(100%) blur(1.5px) brightness(0.6); 
                 transform: scale(0.95);
                 opacity: 0.7;
             }
-            /* Активное фото -> Яркое и Большое */
             .portfolio-masonry .portfolio-item:hover { z-index: 10000; }
             .portfolio-masonry .portfolio-item:hover img {
                 filter: grayscale(0%) blur(0px) brightness(1.1) !important;
@@ -128,7 +127,6 @@
                 box-shadow: 0 30px 60px -10px rgba(91, 81, 216, 0.8), 0 0 30px rgba(91, 81, 216, 0.5);
             }
 
-            /* Эффекты для "Кто я" и "Services" */
             .about-img-container:hover img { filter: grayscale(0%); box-shadow: 0 15px 40px -5px rgba(91, 81, 216, 0.6); transform: translateY(-7px) scale(1.05); z-index: 10; }
             .services-grid .tilt-card:hover .service-card { box-shadow: 0 0 30px var(--primary), 0 0 60px var(--primary); z-index: 100; border-color: var(--primary); }
             .services-grid .tilt-card:hover .service-bg { opacity: 0.8; }
@@ -150,8 +148,7 @@
             .portfolio-item img { 
                 width: 100%; display: block; border-radius: 4px;
                 filter: grayscale(100%); 
-                /* МЕДЛЕННЫЙ ПЕРЕХОД (2.0s) */
-                transition: filter 2.0s ease; 
+                transition: filter 2.0s ease; /* 30% медленнее */
             }
             .about-img-container img { filter: grayscale(100%); transition: filter 2.0s ease; }
 
