--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { background-color: var(--bg); color: var(--text); font-family: 'Montserrat', sans-serif; overflow-x: hidden; line-height: 1.6; cursor: default; }
 
-        /* --- КНОПКИ АДМИНА В ШАПКЕ (Edit / Save) --- */
+        /* --- КНОПКИ АДМИНА В ШАПКЕ --- */
         .header-admin-btn {
             display: none; 
             position: absolute;
@@ -55,7 +55,7 @@
 
         /* --- ПЛАВАЮЩАЯ КНОПКА УДАЛЕНИЯ (ВНИЗУ СПРАВА) --- */
         #batch-delete-btn {
-            display: none; /* Скрыта по умолчанию */
+            display: none; 
             position: fixed;
             bottom: 30px;
             right: 30px;
@@ -66,7 +66,7 @@
             background: #ff4444;
             border: none;
             border-radius: 50px;
-            z-index: 20001; /* Поверх всего */
+            z-index: 20001; 
             cursor: pointer;
             box-shadow: 0 5px 20px rgba(255, 68, 68, 0.5);
             text-transform: uppercase;
@@ -82,6 +82,48 @@
         @keyframes popUp {
             from { transform: scale(0); opacity: 0; }
             to { transform: scale(1); opacity: 1; }
+        }
+
+        /* --- КНОПКА ОБНОВЛЕНИЯ (ТОЛЬКО МОБИЛЬНЫЕ) --- */
+        #refresh-fab {
+            display: none; /* Скрыто на ПК */
+            position: fixed;
+            bottom: 25px;
+            left: 25px; /* Слева внизу */
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px); /* Эффект стекла */
+            border: 1px solid rgba(255, 255, 255, 0.15);
+            box-shadow: 0 4px 15px rgba(0,0,0,0.5);
+            z-index: 9000; /* Ниже модалки, но выше контента */
+            cursor: pointer;
+            align-items: center;
+            justify-content: center;
+            transition: 0.3s;
+            -webkit-tap-highlight-color: transparent;
+        }
+        
+        #refresh-fab svg {
+            width: 24px;
+            height: 24px;
+            fill: white;
+            transition: transform 0.6s cubic-bezier(0.34, 1.56, 0.64, 1);
+        }
+
+        #refresh-fab:active {
+            transform: scale(0.9);
+            background: rgba(91, 81, 216, 0.3); /* Подсветка цветом бренда */
+            border-color: var(--primary);
+        }
+
+        #refresh-fab:active svg {
+            transform: rotate(360deg); /* Вращение при нажатии */
+        }
+
+        @media (max-width: 1024px) {
+            #refresh-fab { display: flex; } /* Показываем только на мобильных */
         }
 
         /* Чекбоксы */
@@ -182,7 +224,6 @@
             transform-origin: center center;
             will-change: transform, opacity;
             
-            /* МАКСИМАЛЬНОЕ КАЧЕСТВО */
             image-rendering: auto; 
             object-fit: contain;
         }
@@ -298,6 +339,10 @@
     </style>
 </head>
 <body>
+
+    <button id="refresh-fab" onclick="location.reload()">
+        <svg viewBox="0 0 24 24"><path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/></svg>
+    </button>
 
     <div id="single-image-modal" class="modal">
         <span class="close-btn" onclick="closeModal('single-image-modal')">&times;</span>
